# vizyonai

./: .gitignore  pyproject.toml  requirements.txt
apps/: streamlit_app.py
legacy/: app.py
legacy/tools/: llm_test.py
src/vizyonai/: __init__.py
src/vizyonai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/vizyonai/adapters/data/: csv_source.py
src/vizyonai/adapters/llm/: lmstudio.py
src/vizyonai/config/: domains.py  settings.py
src/vizyonai/core/: engine.py
src/vizyonai/domains/: matcher.py  recommender.py
src/vizyonai/domains/electronics/: extractors.py  intents.py  plugin.py  ranking.py
src/vizyonai/llm/: prompts.py  render.py
tests/: test_intents_and_extractors.py  test_recommender_and_render.py
